--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
+    "react-pdf": "^4.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.14",
     "styled-components": "^4.3.2"
   },
   "scripts": {
